@@ -50,3 +50,9 @@ tasks.jar {
         extraDepsToPackage.map { zipTree(it) },
     )
 }
+
+tasks.test {
+    if (javaVersion.isJava9Compatible) {
+        jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    }
+}
